--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
-{  
-  "name": "grunt_demo",  
-  "version": "0.1.0",  
-  "devDependencies": {  
-    "grunt": "~0.4.1",  
-    "grunt-contrib-htmlmin": "~0.1.3",  
+{
+  "name": "my-project-name",
+  "version": "0.1.0",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-connect": "^1.0.1",
     "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.1.4",
+	"grunt-contrib-watch": "latest",
+    "grunt-contrib-uglify": "~0.2.2",
     "grunt-regarde": "latest",
-    "grunt-contrib-connect": "latest",
-    "grunt-contrib-livereload": "latest"
+    "serve-static": "^1.10.2"
   }
 }
